@startuml

title __JobFit's Class Diagram__\n
set namespaceseparator none
namespace jobfitpackage {
  abstract class AbstractController {}
  class EditProfileController {}
  class Job {}
  class JobList {}
  class Main {}
  class MainScreenController {}
  class Profile {}
  class ProfileList {}
  class SessionManager {}
  class SignInController {}
  class SignUpController {}
}

namespace javafx.application {
  class Application {}
}

SignInController -l[hidden]- EditProfileController

EditProfileController -up-|> AbstractController
SignInController -up-|> AbstractController
MainScreenController -up-|> AbstractController
SignUpController -up-|> AbstractController

EditProfileController o-- Profile : profile

Main -up-|> Application

MainScreenController o-- JobList : jobList
MainScreenController o-- Profile : profile

SignInController o-- ProfileList : profileList
SignInController o-- Profile : currentProfile
SignUpController o-- ProfileList : profileList
@enduml
